--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "axios": "^1.4.0",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
-    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
