--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "other": "???",
+    "quinta": "set REACT_APP_DB=quinta && npm start",
+    "indexed": "set REACT_APP_DB=indexed && npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
