--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "indexed:linux": "REACT_APP_DB=indexed npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "eslintConfig": {
     "extends": [
